Changes to index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExoDetect AI - NASA Exoplanet Detection Platform</title>
+    <title>ExoDetect AI</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>🌟 ExoDetect AI</h1>
-            <p class="subtitle">NASA Exoplanet Detection Platform - Powered by Machine Learning</p>
+            <p class="subtitle">NASA Exoplanet Detection Platform - Created by "1101 AI-pollo" team</p>
         </header>
 
         <div class="nav-tabs">
@@ -354,18 +354,8 @@
             <div class="card">
                 <h2>About ExoDetect AI</h2>
                 <p style="line-height: 1.8; color: #b0b8c5;">
-                    ExoDetect AI is an advanced machine learning platform designed to automatically identify exoplanets from NASA mission data. The platform utilizes multiple algorithms including XGBoost, Random Forest, Neural Networks, and SVM trained on extensive datasets from the Kepler, K2, and TESS missions to classify planetary candidates with high accuracy.
+                    ExoDetect AI is an advanced machine learning platform designed by the 1101 AI-pollo team for the NASA Space Apps Challenge 2025 to automatically identify exoplanets from NASA mission data. The platform utilizes multiple algorithms trained on extensive datasets to classify planetary candidates with high accuracy.
                 </p>
-
-                <h3 style="color: #667eea; margin-top: 30px; margin-bottom: 15px;">Key Features</h3>
-                <div class="info-section">
-                    <p><strong>🎯 High Accuracy Classification:</strong> Achieves 98%+ accuracy in identifying confirmed exoplanets</p>
-                    <p><strong>📊 Multi-Mission Support:</strong> Compatible with Kepler, K2, and TESS datasets</p>
-                    <p><strong>🤖 Multiple Algorithms:</strong> Choose from XGBoost, Random Forest, Neural Networks, and SVM</p>
-                    <p><strong>🔄 Continuous Learning:</strong> Update models with new data as it becomes available</p>
-                    <p><strong>⚙️ Customizable:</strong> Adjust hyperparameters to optimize for specific use cases</p>
-                    <p><strong>👥 User-Friendly:</strong> Intuitive interface for both researchers and enthusiasts</p>
-                </div>
 
                 <h3 style="color: #667eea; margin-top: 30px; margin-bottom: 15px;">Detection Method</h3>
                 <p style="line-height: 1.8; color: #b0b8c5;">
