--- a/frontend/index.html
+++ b/frontend/index.html
@@ -192,7 +192,7 @@
             </div>
         </div>
     </div>
-
+    <script src="config.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
